--- a/src/app/module1/navbar/navbar.component.scss
+++ b/src/app/module1/navbar/navbar.component.scss
@@ -25,9 +25,11 @@
   box-shadow: 0px 1px 0px goldenrod;
 }
 nav {
-  position: sticky;
+  position: fixed;
   top: 10px;
-  background: rgba(255, 255, 255, 0.1); /* Semi-transparent */
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(255, 255, 255, 0.1);
   width: 90%;
   max-width: 1100px;
   border-radius: 15px;
@@ -36,6 +38,7 @@ nav {
   box-shadow: 0px 0px 30px 0px rgba(277, 228, 237, 0.37);
   border: 2px solid rgba(255, 255, 255, 0.18);
   margin: 0 auto;
+  z-index: 1000;
 }
 
 .dropdown-toggle {
